#5 Created the my-list UI

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,3 +1,7 @@
-<div class="container check_list_container">
-  <router-outlet></router-outlet>
+<div class="container">
+  <div
+    class="check_list_container d-flex flex-column justify-content-center align-items-center gap-3"
+  >
+    <router-outlet></router-outlet>
+  </div>
 </div>
