--- a/ui/src/app/sign-in/sign-in.component.html
+++ b/ui/src/app/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
-<div
+<!-- <div
   class="sign_in d-flex flex-column justify-content-center align-items-center gap-3"
->
+> -->
   <div class="card card_container">
     <div
       class="card-body d-flex flex-column justify-content-center align-items-center gap-3"
@@ -62,4 +62,4 @@
       <app-loading *ngIf="isLoading"></app-loading>
     </div>
   </div>
-</div>
+<!-- </div> -->
