#9 Created the navbar on the my-list component

--- a/ui/src/app/my-list/my-list.component.html
+++ b/ui/src/app/my-list/my-list.component.html
@@ -1,4 +1,5 @@
 <div class="card">
+  <app-navbar></app-navbar>
   <div
     class="card-body list_container d-flex flex-column justify-content-start align-items-start gap-3"
     style="width: 100%"
