--- a/ui/src/app/my-list/my-list.component.html
+++ b/ui/src/app/my-list/my-list.component.html
@@ -1,3 +1,6 @@
+<div class="d-flex flex-column justify-content-center align-items-center mb-5" style="width: 100%;">
+  <button class="btn btn-success" (click)="checkTickets()">checkTickets</button>
+</div>
 <div class="card">
   <app-navbar></app-navbar>
   <div
