--- a/ui/src/app/travels/travels.component.html
+++ b/ui/src/app/travels/travels.component.html
@@ -1,25 +1,17 @@
 <div class="row">
-  <div class="col">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Destination</h5>
-        <p class="card-text">price</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Destination</h5>
-        <p class="card-text">price</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Destination</h5>
-        <p class="card-text">price</p>
+  <div class="col" *ngFor="let ticket of ticketList">
+    <div class="card" [ngClass]="getTicketStatus(ticket.status)">
+      <div class="card-body ">
+        <div
+          class="d-flex justify-content-start align-items-center gap-3 card-title"
+        >
+          <h5>Destination:</h5>
+          <h6>{{ ticket.destination }}</h6>
+        </div>
+        <div class="d-flex justify-content-start align-items-center gap-3">
+          <p>price:</p>
+          <p>{{ ticket.price }}</p>
+        </div>
       </div>
     </div>
   </div>
