#17 Implemented new external Sign In + GuardRoutes

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div
-    class="check_list_container d-flex flex-column justify-content-center align-items-center gap-3"
+    class="d-flex flex-column justify-content-center align-items-center gap-3"
   >
     <router-outlet></router-outlet>
   </div>
