--- a/ui/src/app/travels/travels.component.html
+++ b/ui/src/app/travels/travels.component.html
@@ -13,21 +13,23 @@
     </button>
   </div>
 </nav>
-<div
-  class="row travel_container d-flex justify-content-center align-items-center gap-3"
->
-  <div class="col" *ngFor="let ticket of ticketList">
-    <div class="card" [ngClass]="getTicketStatus(ticket.status)">
-      <div class="card-body">
-        <div
-          class="d-flex justify-content-start align-items-center gap-3 card-title"
-        >
-          <h5>Destination:</h5>
-          <h6>{{ ticket.destination }}</h6>
-        </div>
-        <div class="d-flex justify-content-start align-items-center gap-3">
-          <p>price:</p>
-          <p>{{ ticket.price }}</p>
+<div class="container">
+  <div
+    class="row travel_container d-flex justify-content-center align-items-center gap-3"
+  >
+    <div class="col" *ngFor="let ticket of ticketList">
+      <div class="card" [ngClass]="getTicketStatus(ticket.status)">
+        <div class="card-body">
+          <div
+            class="d-flex justify-content-start align-items-center gap-3 card-title"
+          >
+            <h5>Destination:</h5>
+            <h6>{{ ticket.destination }}</h6>
+          </div>
+          <div class="d-flex justify-content-start align-items-center gap-3">
+            <p>price:</p>
+            <p>{{ ticket.price }}</p>
+          </div>
         </div>
       </div>
     </div>
